[project]
name = "bwpy"
version = "0.1.0"
description = "bitwarden cli"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
bwpy = "bwp:main"

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "ruff>=0.9.6",
]
